# gerador_xml_e_conversor_csv

./: app.py  pyproject.toml
gerador/: __init__.py  config.py  constants.py  routes.py  utils.py
gerador/services/: gerar_xml.py  limpar_pasta_download.py  process_csv.py  processar_conversor_csv.py  processar_conversor_csv_grande.py  service_clean_old_files.py  service_create_xml.py  service_process_csv.py  service_processar_csv_conversor.py  service_processar_csv_conversor_grande.py
gerador/static/css/: base.css  conversor.css  index.css  progresso.css  resultado.css  sobre.css
gerador/static/js/: base.js  conversor.js  index.js  progresso.js  resultado.js  sobre.js
gerador/templates/: base.html  conversor_csv.html  index.html  progresso.html  resultado.html  resultado_conversor.html  sobre.html
gerador/tests/: test_csv_validator.py  test_file_validator.py
gerador/validators/: __init__.py  base_validator.py  csv_validator.py  file_validator.py  xml_validator.py
