[project]
name = "gerador-xml-netwin"
version = "0.1.0"
description = "Gerar xml apartir de dados em csv da base de dados do netwin, para importação e edição de dados em massa."
authors = [
    {name = "geovanecarvalho",email = "geovane.carvalho@telemont.com.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
